<resources>
    <string name="app_name">OshieteKanji</string>
    <string name="user_s_login_streak">User\'s Login Streak</string>
    <string name="streak_count">Streak Count</string>
    <string name="study_level_frequency">Study Level Frequency</string>
    <string name="level_01">Level 01</string>
    <string name="count">Count #</string>
    <string name="level_02">Level 02</string>
    <string name="level_03">Level 03</string>
    <string name="level_04">Level 04</string>
    <string name="level_05">Level 05</string>
    <string name="level_06">Level 06</string>
    <string name="level_07">Level 07</string>
    <string name="level_08">Level 08</string>
    <string name="level_09">Level 09</string>
    <string name="level_10">Level 10</string>
    <string name="study">Study</string>
    <string name="review">Review</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_wait">Please wait...</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="score">Score</string>
    <string name="kanji">KANJI</string>
    <string name="choices">Choices</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="enter_password_again">Enter Password Again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>