<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".activities.Quiz">


    <!-- TO BE REVISED -->
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:2"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
        app:srcCompat="@drawable/background" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />
    <!-- TO BE REVISED -->

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/jujutsu_kaisen"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/score"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/kanjiContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/clear_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewKanji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/black_han_sans"
            android:gravity="center"
            android:hint="@string/kanji"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="100sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/choicesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/clear_background"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kanjiContainer">

        <TextView
            android:id="@+id/textViewChoiceOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/clear_background"
            android:gravity="center"
            android:hint="@string/choices"
            android:onClick="clickTextViewChoiceOne"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewChoiceTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/clear_background"
            android:gravity="center"
            android:hint="@string/choices"
            android:onClick="clickTextViewChoiceTwo"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewChoiceThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/clear_background"
            android:gravity="center"
            android:hint="@string/choices"
            android:onClick="clickTextViewChoiceThree"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewChoiceFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/clear_background"
            android:gravity="center"
            android:hint="@string/choices"
            android:onClick="clickTextViewChoiceFour"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewChoiceFive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/clear_background"
            android:gravity="center"
            android:hint="@string/choices"
            android:onClick="clickTextViewChoiceFive"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>